src/pages/ParksPage/ParksPage.css
.parks-page-container {
    background-image: url(./../../../public/assets/background.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    min-height: 100vh;
    min-width: 100vw;
    display: grid;
    grid-template-columns: min-content auto;
    grid-template-rows: 5em min-content 65em;
}

.park-details-container {
    grid-area: 3 / 2;
    background-color: rgb(247, 166, 15, .9);
    border-radius: 12px;
    display: flex;
    justify-content: center;
    padding: 1em;
    color: white;
    max-width: 25em;
    max-height: 60em;
    justify-self: center;
    font-size: 1.5em;
}

.park-details- {
    grid-column-start: 2;
    grid-row-end: 3;
    background-color: rgb(247, 166, 15, .9);
    border-radius: 12px;
    display: flex;
    justify-content: center;
    padding: 1em;
    color: white;
    justify-self: center;
    font-size: 1.5em;
    max-width: max-content;
}

.state-name {
    grid-column-start: 1;
    margin-left: 1.5em;
    max-height: fit-content;
    max-width: fit-content;
    padding: 0.25em;
    border-radius: 12px;
    font-size: 3em;
    background-color: rgb(247, 166, 15, .9);
}

.park-cards-container {
    grid-column-start: 1;
    margin-left: 1.5em;
    overflow-y: scroll;
    overflow-x: hidden;
}

.park-cards-container::-webkit-scrollbar {
    display: none;
}

